--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -33,21 +33,21 @@ casks = [
 
 [packages.windows.scoop]
 buckets = [
-  { name = "extras",                  url = "extras"                                    },
-  { name = "nerd-fonts",              url = "nerd-fonts"                                },
-  { name = "tlipoca9-scoop-buckets",  url = "https://github.com/tlipoca9/scoop-bucket"  },
+  { name = "extras"                 , url = "extras"                                    },
+  { name = "nerd-fonts"             , url = "nerd-fonts"                                },
+  { name = "tlipoca9_scoop-buckets" , url = "https://github.com/tlipoca9/scoop-bucket"  },
 ]
 commands = [
-  { cmd = "git",      name = "main/git"                   },
-  { cmd = "sudo",     name = "main/sudo"                  },
-  { cmd = "7zip",     name = "main/7zip"                  },
-  { cmd = "dark",     name = "main/dark"                  },
-  { cmd = "curl",     name = "main/curl"                  },
-  { cmd = "chezmoi",  name = "main/chezmoi"               },
-  { cmd = "nvim",     name = "main/neovim"                },
-  { cmd = "make",     name = "main/make"                  },
-  { cmd = "rg",       name = "main/ripgrep"               },
-  { cmd = "zsh",      name = "tlipoca9-scoop-bucket/zsh"  },
+  { cmd = "git"      , name = "main/git"                   },
+  { cmd = "sudo"     , name = "main/sudo"                  },
+  { cmd = "7z"       , name = "main/7zip"                  },
+  { cmd = "dark"     , name = "main/dark"                  },
+  { cmd = "curl"     , name = "main/curl"                  },
+  { cmd = "chezmoi"  , name = "main/chezmoi"               },
+  { cmd = "nvim"     , name = "main/neovim"                },
+  { cmd = "make"     , name = "main/make"                  },
+  { cmd = "rg"       , name = "main/ripgrep"               },
+  { cmd = "zsh"      , name = "tlipoca9_scoop-bucket/zsh"  },
 ]
 fonts = [
   { font = "FiraCode Nerd Font Mono", name = "nerd-fonts/FiraCode-NF" },
