--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -7,22 +7,22 @@ NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Ho
 
 [packages.darwin.brews]
 commands = [
-  { cmd = "gcc"     , name = "gcc"      , desc = ""},
-  { cmd = "zsh"     , name = "zsh"      , desc = ""},
-  { cmd = "git"     , name = "git"      , desc = ""},
-  { cmd = "curl"    , name = "curl"     , desc = ""},
-  { cmd = "chezmoi" , name = "chezmoi"  , desc = ""},
-  { cmd = "nvim"    , name = "neovim"   , desc = ""},
-  { cmd = "bat"     , name = "bat"      , desc = ""},
-  { cmd = "jq"      , name = "jq"       , desc = ""},
-  { cmd = "yq"      , name = "yq"       , desc = ""},
-  { cmd = "eza"     , name = "eza"      , desc = ""},
-  { cmd = "rg"      , name = "ripgrep"  , desc = ""},
-  { cmd = "fd"      , name = "fd"       , desc = ""},
-  { cmd = "fzf"     , name = "fzf"      , desc = ""},
-  { cmd = "gitui"   , name = "gitui"    , desc = ""},
-  { cmd = "file"    , name = "file"     , desc = ""},
-  { cmd = "kcat"    , name = "kcat"     , desc = ""},
+  { cmd = "gcc"     , name = "gcc"      },
+  { cmd = "zsh"     , name = "zsh"      },
+  { cmd = "git"     , name = "git"      },
+  { cmd = "curl"    , name = "curl"     },
+  { cmd = "chezmoi" , name = "chezmoi"  },
+  { cmd = "nvim"    , name = "neovim"   },
+  { cmd = "bat"     , name = "bat"      },
+  { cmd = "jq"      , name = "jq"       },
+  { cmd = "yq"      , name = "yq"       },
+  { cmd = "eza"     , name = "eza"      },
+  { cmd = "rg"      , name = "ripgrep"  },
+  { cmd = "fd"      , name = "fd"       },
+  { cmd = "fzf"     , name = "fzf"      },
+  { cmd = "gitui"   , name = "gitui"    },
+  { cmd = "file"    , name = "file"     },
+  { cmd = "kcat"    , name = "kcat"     },
 ]
 fonts = [
   { font = "FiraCode Nerd Font Mono", name = "font-fira-code-nerd-font" },
