--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -37,9 +37,6 @@ symbol = " "
 [git_branch]
 symbol = " "
 
-[git_commit]
-tag_symbol = '  '
-
 [golang]
 symbol = " "
 
@@ -91,7 +88,6 @@ symbol = " "
 [os.symbols]
 Alpaquita = " "
 Alpine = " "
-AlmaLinux = " "
 Amazon = " "
 Android = " "
 Arch = " "
@@ -107,7 +103,6 @@ Garuda = "󰛓 "
 Gentoo = " "
 HardenedBSD = "󰞌 "
 Illumos = "󰈸 "
-Kali = " "
 Linux = " "
 Mabox = " "
 Macos = " "
@@ -124,13 +119,11 @@ Pop = " "
 Raspbian = " "
 Redhat = " "
 RedHatEnterprise = " "
-RockyLinux = " "
 Redox = "󰀘 "
 Solus = "󰠳 "
 SUSE = " "
 Ubuntu = " "
 Unknown = " "
-Void = " "
 Windows = "󰍲 "
 
 [package]
@@ -155,7 +148,7 @@ symbol = "󰟔 "
 symbol = " "
 
 [rust]
-symbol = "󱘗 "
+symbol = " "
 
 [scala]
 symbol = " "
@@ -165,6 +158,3 @@ symbol = " "
 
 [zig]
 symbol = " "
-
-[gradle]
-symbol = " "
