--- a/.chezmoidata/services.toml
+++ b/.chezmoidata/services.toml
@@ -11,3 +11,33 @@ sudo yum install docker -y
 sudo systemctl enable docker
 sudo systemctl start docker
 """
+
+[services.linux.v2rayA]
+enabled = true
+[[services.linux.v2rayA.osRelease]]
+osReleaseId = "opencloudos"
+checker = """
+docker ps | grep v2raya
+"""
+installer = """
+cat <<EOF > $HOME/.services/v2rayA/docker-compose.yml
+version: "3"
+
+services:
+  v2raya:
+    image: mzz2017/v2raya:v2.2.6.3
+    privileged: true
+    container_name: v2raya
+    network_mode: host
+    volumes:
+      - /lib/modules:/lib/modules:ro
+      - /etc/resolv.conf:/etc/resolv.conf
+      - /etc/v2raya:/etc/v2raya
+    environment:
+      - V2RAYA_LOG_FILE=/tmp/v2raya.log
+      - V2RAYA_V2RAY_BIN=/usr/local/bin/v2ray
+      - V2RAYA_NFTABLES_SUPPORT=off
+      - IPTABLES_MODE=legacy
+EOF
+docker-compose -f $HOME/.services/v2rayA/docker-compose.yml up -d
+"""
