chore: polish dotfiles

--- a/.chezmoidata/darwin/packages.toml
+++ b/.chezmoidata/darwin/packages.toml
@@ -2,7 +2,7 @@
 enable = true
 type = "script"
 checker = { type = "command", command = "brew" }
-install_script = """
+installer = """
 NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 """
 
@@ -106,6 +106,12 @@ installer = { type = "formula" }
 enable = true
 type = "homebrew"
 checker = { type = "command", command = "starship" }
+installer = { type = "formula" }
+
+[darwin.packages.gum]
+enable = true
+type = "homebrew"
+checker = { type = "command", command = "gum" }
 installer = { type = "formula" }
 
 [darwin.packages.font-fira-code-nerd-font]
