--- a/.chezmoidata/windows/packages.toml
+++ b/.chezmoidata/windows/packages.toml
@@ -124,7 +124,7 @@ enable = true
 type = "scoop"
 checker = { type = "font", font = "FiraCode Nerd Font Mono" }
 
-[windows.packages."charm-gum"]
+[windows.packages."main/charm-gum"]
 enable = true
 type = "scoop"
 checker = { type = "command", command = "gum" }
