chore: polish dotfiles

--- a/.chezmoidata/darwin/packages.toml
+++ b/.chezmoidata/darwin/packages.toml
@@ -132,3 +132,9 @@ enable = true
 type = "homebrew"
 checker = { type = "cask", cask = "wezterm" }
 installer = { type = "cask" }
+
+[linux.packages.atuin]
+enable = true
+type = "homebrew"
+checker = { type = "command", command = "atuin" }
+installer = { type = "formula" }
