--- a/.chezmoidata/linux/packages.toml
+++ b/.chezmoidata/linux/packages.toml
@@ -128,3 +128,10 @@ enable = true
 type = "homebrew"
 checker = { type = "command", command = "navi" }
 installer = { type = "formula" }
+
+[linux.packages.fselect]
+enable = true
+type = "homebrew"
+checker = { type = "command", command = "fselect" }
+installer = { type = "formula" }
+
