--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -20,8 +20,9 @@
     "workbench.iconTheme": "material-icon-theme",
     "workbench.productIconTheme": "bongocat",
     "workbench.editor.showTabs": "multiple",
+    "window.zoomLevel": 3,
     "editor.fontFamily": "'FiraCode Nerd Font Mono', Consolas, 'Courier New', monospace",
-    "editor.fontSize": 16,
+    "editor.fontSize": 12,
     // vim
     "vim.leader": "<space>",
     "editor.lineNumbers": "relative",
