--- a/.chezmoidata/windows/packages.toml
+++ b/.chezmoidata/windows/packages.toml
@@ -130,6 +130,6 @@ type = "scoop"
 checker = { type = "command", command = "gum" }
 
 [windows.packages."extras/keyviz"]
-enable = true
+enable = false
 type = "scoop"
 checker = { type = "scoop-apps", bucket = "extras", app = "keyviz" }
